Thu Mar 25 12:18:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/long.html, installdir/short.html: Remove backslashes
	before quotes in HTML versions of the builtin templates.

	* Makefile.in: Add long.html & short.html to COMMONHTML list, so
	they get installed in common_dir.

Thu Mar 25 11:56:50 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch), htcommon/defaults.cc, 
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Add date_format attribute suggested by Marc Pohl.

Thu Mar 25 09:46:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Avoid segfault when DocAnchors
	list has too few entries for current anchor number.

Tue Mar 23 15:08:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Fix problem when documents
	did not have descriptions.

Tue Mar 23 14:17:14 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parseString): Use minimum_word_length instead of
	hardcoded constant.

Tue Mar 23 14:02:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Fix bug where noindex_start was empty, allow case
	insensitive matching of noindex_start & noindex_end.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Fix inconsistencies in documentation for noindex_start & noindex_end.

Tue Mar 23 14:01:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Add check for <a href=...> tag that is missing a
	closing </a> tag, terminating it at next href.

Tue Mar 23 13:57:35 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: Fix check of Content-type header in readHeader(),
	correcting bug introduced Jan 10 (for PR#91), and check against
	allowed external parsers.

Tue Mar 23 13:54:35 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: More lenient comment parsing, allows extra dashes.
